# matcha-game

./: .$matcha_game_UML.drawio.bkp  .gitattributes  .gitignore  README.md  matcha_game_UML.drawio
CatchTheMatcha/: CMakeLists.txt  README.md
CatchTheMatcha/data/json/: nameSpriteData.json  nameSpriteTestData.json  testScreenNavData2.json  testSpriteSheetData.json
CatchTheMatcha/docs/: main.cpp
CatchTheMatcha/docs/clang/: CatchTheMatcha
CatchTheMatcha/lib/sdl3/SDL3_image.xcframework/ios-arm64/SDL3_image.framework/: Info.plist
CatchTheMatcha/res/data/test/: nameSpriteTestData.json  testScreenNavData.json  testScreenNavData2.json  testSpriteSheetData.json
CatchTheMatcha/src/: main.cpp
CatchTheMatcha/src/controller/: GameController.cpp  GameController.hpp  SceneController.cpp  SceneController.hpp
CatchTheMatcha/src/controller/gamestyles/: CatcherController.cpp  CatcherController.hpp
CatchTheMatcha/src/controller/request/: Request.cpp  Request.hpp  SceneRequest.cpp  SceneRequest.hpp
CatchTheMatcha/src/controller/requests/: NavRequest.cpp  NavRequest.hpp  Request.hpp  SceneRequest.hpp  TimerRequest.hpp
CatchTheMatcha/src/model/: GameModel.cpp  GameModel.hpp
CatchTheMatcha/src/model/gamestyles/: CatcherGameModel.hpp  CatcherLevelStruct.cpp  CatcherLevelStruct.hpp
CatchTheMatcha/src/model/screen/: ScreenModel.cpp  ScreenModel.hpp  ScreenNavigator.cpp  ScreenNavigator.hpp
CatchTheMatcha/src/model/sprite/: Sprite.cpp  Sprite.hpp  SpriteSheet.cpp  SpriteStruct.hpp
CatchTheMatcha/src/model/states/: BoxToCatchState.cpp  BoxToCatchState.hpp  CharacterState.cpp  CharacterState.hpp  IdleState.cpp  IdleState.hpp  MainCatcherState.cpp  MainCatcherState.hpp  SpriteState.hpp
CatchTheMatcha/src/model/states/buttons/: ExitButtonState.cpp  ExitButtonState.hpp  InstrOnStartScrnState.cpp  InstrOnStartScrnState.hpp  InstructionsButtonState.cpp  InstructionsButtonState.hpp  MenuButtonState.cpp  MenuButtonState.hpp  NavButtonState.cpp  NavButtonState.hpp  ReplayButtonState.cpp  ReplayButtonState.hpp  ReturnButtonState.cpp  ReturnButtonState.hpp
CatchTheMatcha/src/model/states/commands/: IdleCommand.cpp  JumpingCommand.cpp  JumpingCommand.hpp  LoseCommand.cpp  LoseCommand.hpp  RunningCommand.cpp  RunningCommand.hpp  SpeedBoostCommand.cpp  SpeedBoostCommand.hpp  StateCommand.hpp  TranslateCommand.cpp  TranslateCommand.hpp  VictoryCommand.cpp  VictoryCommand.hpp  WalkingCommand.cpp  WalkingCommand.hpp
CatchTheMatcha/src/utils/: Posn.hpp
CatchTheMatcha/src/utils/classes/: Timer.hpp
CatchTheMatcha/src/utils/data/: NameSpriteMap.cpp  NameSpriteMap.hpp  NameStateSheetMap.hpp
CatchTheMatcha/src/utils/data_maps/: NameSpriteMap.cpp  NameSpriteMap.hpp  NameStateSheetMap.cpp  NameStateSheetMap.hpp
CatchTheMatcha/src/utils/enum/: REQUEST.h
CatchTheMatcha/src/utils/enums/: NAME.h  TIMER.h
CatchTheMatcha/src/utils/python_utils/: concatenate_horizontal.py
CatchTheMatcha/src/utils/sdl_util/: sdl_rect_utils.h
CatchTheMatcha/src/utils/sdl_utils/: sdl_rect_utils.cpp  sdl_rect_utils.h
CatchTheMatcha/src/view/: GameView.cpp  GameView.hpp
CatchTheMatcha/test_compile/: main_output  program_w_includes_only.cpp  program_w_sys_lib_only_output
CatchTheMatcha/tests/model/command/: CommandTest.cpp
CatchTheMatcha/tests/model/screen/: ScreenModelTest.cpp  ScreenNavigatorTest.cpp
CatchTheMatcha/tests/model/sprite/: SpriteTest.cpp
CatchTheMatcha/tests/utils/: PosnTest.cpp
CatchTheMatcha/tests/utils/data/: NameStateSheetMapTest.cpp
textures/: krita_matcha_game.kra  (+1 more)
(+243 files in other folders)
